--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "evm": "buidler node",
+    "test": "buidler test --network localhost"
   },
   "author": "",
-  "license": "ISC",
+  "license": "None",
   "devDependencies": {
     "@nomiclabs/buidler": "^1.3.2",
     "@nomiclabs/buidler-ethers": "^1.3.2",
@@ -15,6 +16,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.5",
+    "buidler-gas-reporter": "^0.1.3",
     "chai": "^4.2.0",
     "ethereum-waffle": "^2.5.0",
     "ethers": "^4.0.47",
